[package]

name = "dataflow_join"
version = "0.0.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies.abomonation]
git="https://github.com/frankmcsherry/abomonation"

[dependencies.timely]
# git="https://github.com/frankmcsherry/timely-dataflow"
path="../timely-dataflow"

[dependencies]
docopt="*"
columnar="*"
time = "*"
mmap="*"
# timely="*"
