[package]
name = "alg3_dynamic"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies.timely]
git="http://github.com/frankmcsherry/timely-dataflow"

[dependencies]
timely_sort="*"
rand="*"
time="*"
fnv="*"

[dependencies.graph_map]
git="http://github.com/frankmcsherry/graph-map"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false